--- a/PortaleGeo/Views/Home/Upload.cshtml
+++ b/PortaleGeo/Views/Home/Upload.cshtml
@@ -148,6 +148,7 @@
 
     </div>
     <br />
+
     <div class="row">
         <div class="col-sm-1">
             <input type="submit" value="upload" class="btn btn-dark" id="Carica" name="upload" />
@@ -166,7 +167,8 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.DescrizioneFile, "File da Esportare", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(m=>m.DescrizioneFile, ViewBag.DescrizioneFile2 as SelectList,"", htmlAttributes: new { @class = "form-control" , @required = "required" })
+                    @Html.DropDownList("DescrizioneFile" , ViewBag.FileEsportazione as SelectList, "", htmlAttributes: new { @class = "form-control", @id="EsportaFile"})
+                 
                     @Html.ValidationMessageFor(m => m.DescrizioneFile, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -359,14 +361,15 @@
                 });
             });
         });
-              $(document).on("click", "#esporta", function () {
-                var Nome_File = $('#DescrizioneFile').val();
-                  console.log($('#DescrizioneFile').val());
+        $(document).on("click", "#esporta", function () {
+            var Nome_File = $('#EsportaFile :selected').text();
+           
+            console.log($('#EsportaFile :selected').text());
 
                 $.ajax({
                     dataType: "json",
                     type: "POST",
-                    url: "Conferma/Index",
+                    url: "Estrai/Home",
                     data: { 'Name_File': Nome_File },
                     success: function (data) {
                         if (data.code === 1) {
