LS - aggiornamento nometabella, button estrai

--- a/PortaleGeo/Views/GeoDati/Create.cshtml
+++ b/PortaleGeo/Views/GeoDati/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model NuovoPortaleGeo.Models.CSVdati
+﻿@model NuovoPortaleGeo.Models.Geo_Dati
 
 @{
     ViewBag.Title = "Create";
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CSVdati</h4>
+        <h4>GeoDati</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
