--- a/PortaleGeo/Views/GeoDati/Delete.cshtml
+++ b/PortaleGeo/Views/GeoDati/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model NuovoPortaleGeo.Models.CSVdati
+﻿@model NuovoPortaleGeo.Models.Geo_Dati
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CSVdati</h4>
+    <h4>GeoDati</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
