--- a/PortaleGeo/Views/GeoDati/Details.cshtml
+++ b/PortaleGeo/Views/GeoDati/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model NuovoPortaleGeo.Models.CSVdati
+﻿@model NuovoPortaleGeo.Models.Geo_Dati
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>CSVdati</h4>
+    <h4>Geo_Dati</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
